# FinalProject

./: .gitignore  CLAUDE.md  Codex.md  DEBUGGING_SUMMARY.md  DEPLOY.md  Dataflow.md  FILE_STRUCTURE.md  GEMINI.md  IMPLEMENTATION_STATUS.md  Project.md  ProxyFix.sh  README.md  RUN_INSTRUCTIONS.md  SKILLS_QUICK_REF.md  Sim2Real.md  SimTodo.md  TODO.md  WORKFLOW_ROS2_2D_SIM.md  WORKFLOW_ROS2_GAZEBO_SIM.md  architecture_diagram_generator.py  cli.py  err.md  ppt.md  ppt_content_plan.md  process.md  requirements.txt  ros_topic_comm.py  run.py  shared_queue.py  start_robot_system.sh  test_monitoring_display.py  重构.md
Agent_Module/: __init__.py  __main__.py  executor.py  parameter.py  planner.py  replanner.py
ChaseBot_Project/: NEWTEST.md  README.md  chase_bot.yaml  llm_agent.py  simulator.py
Comm_Module/: README.md  __init__.py  execution_comm.py  manual_feedback_cli.py
Data_Module/: README.md  (+8 more)
ROS_Module/ros_module/: package.xml  setup.cfg  setup.py
ROS_Module/ros_module/launch/: ros_module.launch.py
ROS_Module/ros_module/nodes/: llm_receiver_node.py  simulator_node.py  ui_input_node.py
Sim_Module/gazebo/Go2_Gazebo_Description/: CMakeLists.txt  README.md  package.xml  setup.py
Sim_Module/gazebo/Go2_Gazebo_Description/config/: controllers.yaml
Sim_Module/gazebo/Go2_Gazebo_Description/go2_gazebo_description/: __init__.py  gazebo_robot_controller.py
Sim_Module/gazebo/Go2_Gazebo_Description/launch/: go2_gazebo.launch.py
Sim_Module/gazebo/Go2_Gazebo_Description/resource/: go2_gazebo_description
Sim_Module/gazebo/Go2_Gazebo_Description/urdf/: go2.urdf.xacro
(+330 files in other folders)
