<?xml version="1.0"?>
<package format="3">
  <name>ros_module</name>
  <version>0.0.0</version>
  <description>ROS2 module for LLM robot control</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
